--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "vue-axios": "^2.1.5",
     "vue-cookies": "^1.7.0",
     "vue-router": "^3.2.0",
+    "vue-sessionstorage": "^1.0.0",
     "vuelidate": "^0.7.5"
   },
   "devDependencies": {
